refactor: 'Ucl_RestCallout' reworked. 'Ucl_RestCallout' was reworked because it didnt accomplish what was expected. Previously it returned a list, now it returns a map. 'Ucl_LegalAdvisor' constructor is now used in the getData method. This change was made to avoid using nested for loops in the insert class.

--- a/force-app/main/default/classes/Ucl_RestCallout.cls
+++ b/force-app/main/default/classes/Ucl_RestCallout.cls
@@ -1,27 +1,48 @@
 public with sharing class Ucl_RestCallout {
+  public Map<String, Ucl_LegalAdvisor> getData() {
+    Map<String, Ucl_LegalAdvisor> legalAdvisorMap = new Map<String, Ucl_LegalAdvisor>();
 
-    public List<Ucl_LegalAdvisor> getData() {
-        Http http = new Http();
-        HttpRequest request = new HttpRequest();
-        request.setEndpoint('https://altimetrik-bootcamp.herokuapp.com/LegalAccounts');
-        request.setMethod('GET');
+    Http http = new Http();
+    HttpRequest request = new HttpRequest();
+    request.setEndpoint(
+      'https://altimetrik-bootcamp.herokuapp.com/LegalAccounts'
+    );
+    request.setMethod('GET');
 
-        try {
-            HttpResponse response = http.send(request);
-            if (response.getStatusCode() == 200) {
-                System.debug(Ucl_LegalAdvisor.parse(response.getBody()));
-                return Ucl_LegalAdvisor.parse(response.getBody());
-            } else {
-                System.debug('Error: ' + response.getStatusCode() + ' - ' + response.getStatus());
-                System.debug('Response: ' + response.getBody());
-                Ucl_ErrorHandlingUtils.sendErrorEmail('Error: ' + response.getStatusCode() + ' - ' + response.getStatus(), 'Response: ' + response.getBody());
+    try {
+      HttpResponse response = http.send(request);
+      if (response.getStatusCode() == 200) {
+        List<Object> results = (List<Object>) JSON.deserializeUntyped(
+          response.getBody()
+        );
 
-            }
-        } catch (Exception e) {
-            System.debug('Exception: ' + e.getMessage());
-            Ucl_ErrorHandlingUtils.sendErrorEmail('Excepction', 'Exception: ' + e.getMessage());
+        for (Object result : results) {
+          Ucl_LegalAdvisor advisor = new Ucl_LegalAdvisor(
+            (Map<String, Object>) result
+          );
+
+          legalAdvisorMap.put(advisor.accountNumber, advisor);
         }
-
-        return new List<Ucl_LegalAdvisor>();
+        System.debug(legalAdvisorMap);
+        return legalAdvisorMap;
+      } else {
+        System.debug(
+          'Error: ' + response.getStatusCode() + ' - ' + response.getStatus()
+        );
+        System.debug('Response: ' + response.getBody());
+        Ucl_ErrorHandlingUtils.sendErrorEmail(
+          'Error: ' + response.getStatusCode() + ' - ' + response.getStatus(),
+          'Response: ' + response.getBody()
+        );
+      }
+    } catch (Exception e) {
+      System.debug('Exception: ' + e.getMessage());
+      Ucl_ErrorHandlingUtils.sendErrorEmail(
+        'Exception',
+        'Exception: ' + e.getMessage()
+      );
     }
+
+    return legalAdvisorMap;
+  }
 }
