refactor: Ucl_ErrorHandlingUtils rename to Ucl_EmailNotificationManager. This change was done for better readability because Error Logs constructor have its own method.

--- a/force-app/main/default/classes/Ucl_EmailNotificationManager.cls
+++ b/force-app/main/default/classes/Ucl_EmailNotificationManager.cls
@@ -1,4 +1,4 @@
-public with sharing class Ucl_ErrorHandlingUtils {
+public with sharing class Ucl_EmailNotificationManager {
   public static void sendErrorEmail(String subject, String body) {
     Messaging.SingleEmailMessage email = new Messaging.SingleEmailMessage();
     String[] toAddresses = new List<String>{ 'diegoolivierivii@gmail.com' };
