feat: executeScheduledDataProcessor method added. This method executes the nightly service on demand.

--- a/force-app/main/default/classes/Ucl_ScheduledDataProcessor.cls
+++ b/force-app/main/default/classes/Ucl_ScheduledDataProcessor.cls
@@ -4,6 +4,12 @@ global with sharing class Ucl_ScheduledDataProcessor implements Schedulable {
         dataProcessingService();
     }
 
+    @AuraEnabled
+    public static void executeScheduledDataProcessor() {
+        Ucl_ScheduledDataProcessor invocation = new Ucl_ScheduledDataProcessor();
+        invocation.dataProcessingService();
+    }
+
     public void dataProcessingService() {
         Map<String, Ucl_LegalAdvisor> legalAdvisorMap = Ucl_RestCallout.getData();
 
