fix: changed client_number__c to Client_Key__c. Client_Number__c was wrongfully used as an external id in the upsert statement. This was changed to the new Client_Key__c that uses Legal_Advisor__c.Account_Number__c + Client__c.Client_Number__c.

--- a/force-app/main/default/classes/Ucl_UpsertManager.cls
+++ b/force-app/main/default/classes/Ucl_UpsertManager.cls
@@ -56,7 +56,8 @@ public with sharing class Ucl_UpsertManager {
               Phone__c = client.phone,
               Address__c = client.address,
               Client_Number__c = client.clientNumber,
-              Name = client.firstName + ' ' + client.lastName
+              Name = client.firstName + ' ' + client.lastName,
+              Client_Key__c = legalAdvisorExternalId + client.clientNumber
           );
 
           clientsToUpsert.add(clientRecord);
@@ -64,7 +65,7 @@ public with sharing class Ucl_UpsertManager {
   }
 
     try {
-      upsert clientsToUpsert Client_Number__c;
+      upsert clientsToUpsert Client_Key__c;
     } catch (DmlException e) {
       
       Ucl_ErrorLogManager errorLogManager = new Ucl_ErrorLogManager();
@@ -78,4 +79,3 @@ public with sharing class Ucl_UpsertManager {
     }
   }
 }
-
