--- a/force-app/main/default/classes/Ucl_EmailNotificationManager.cls
+++ b/force-app/main/default/classes/Ucl_EmailNotificationManager.cls
@@ -1,11 +1,19 @@
 public with sharing class Ucl_EmailNotificationManager {
   public static void sendErrorEmail(String subject, String body) {
-    Messaging.SingleEmailMessage email = new Messaging.SingleEmailMessage();
-    String[] toAddresses = new List<String>{ 'diegoolivierivii@gmail.com' };
-    email.setToAddresses(toAddresses);
-    email.setSubject(subject);
-    email.setPlainTextBody(body);
+    List<User> systemAdminsEmails = [SELECT Email FROM User WHERE Profile.Name = 'System Administrator'];
 
-    Messaging.sendEmail(new List<Messaging.SingleEmailMessage>{ email });
+    List<Messaging.SingleEmailMessage> emailsList = new List<Messaging.SingleEmailMessage>();
+
+    for (User admin : systemAdminsEmails) {
+      Messaging.SingleEmailMessage email = new Messaging.SingleEmailMessage();
+      String[] toAddresses = new List<String>{ admin.Email };
+      email.setToAddresses(toAddresses);
+      email.setSubject(subject);
+      email.setPlainTextBody(body);
+
+      emailsList.add(email);
+    }
+
+    Messaging.sendEmail(emailsList);
   }
 }
