feat: schedulableDataProcessor method added. This method was added because previously the schedulable was called in a sincronic way which apex jobs dont allow, which caused DML exceptions and was making the nightly service not work properly. This wrapper method is used to make the dataProcessingService method async.

--- a/force-app/main/default/classes/Ucl_ScheduledDataProcessor.cls
+++ b/force-app/main/default/classes/Ucl_ScheduledDataProcessor.cls
@@ -1,13 +1,19 @@
 global with sharing class Ucl_ScheduledDataProcessor implements Schedulable {
 
     global void execute(SchedulableContext ctx) {
-        dataProcessingService();
+        schedulableDataProcessor();
     }
 
     @AuraEnabled
     public static void executeScheduledDataProcessor() {
         Ucl_ScheduledDataProcessor invocation = new Ucl_ScheduledDataProcessor();
         invocation.dataProcessingService();
+    }
+
+    @future(callout=true)
+    public static void schedulableDataProcessor() {
+        Ucl_ScheduledDataProcessor scheduled = new Ucl_ScheduledDataProcessor();
+        scheduled.dataProcessingService();
     }
 
     public void dataProcessingService() {
