fix: Client_Key__c substring operation added. Client_Key__c now incorporates a substring to prevent DML exceptions caused by exceeding the allowed length.

--- a/force-app/main/default/classes/Ucl_UpsertManager.cls
+++ b/force-app/main/default/classes/Ucl_UpsertManager.cls
@@ -57,7 +57,7 @@ public with sharing class Ucl_UpsertManager {
               Address__c = client.address,
               Client_Number__c = client.clientNumber,
               Name = client.firstName + ' ' + client.lastName,
-              Client_Key__c = legalAdvisorExternalId + client.clientNumber
+              Client_Key__c = legalAdvisorExternalId.substring(0, 36) + client.clientNumber.substring(0, 36)
           );
 
           clientsToUpsert.add(clientRecord);
